--- a/dogger.scss
+++ b/dogger.scss
@@ -82,7 +82,7 @@ body {
                 width: 100%;
                 height: 100%;
                 margin: 70px 10px;
-                background-image: url('../src/images/dogger_img_1.png');
+                background-image: url('./src/dogger_img_1.png');
                 background-size: cover;
 
             }
