--- a/dogger.css
+++ b/dogger.css
@@ -1,190 +1,149 @@
-body .welcome .po, body .nav-bar .home ul, body .nav-bar {
+.nav-bar {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
 * {
+  margin: 0;
   box-sizing: border-box;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-body {
-  margin: 0;
-}
-body .border {
+.nav-bar {
   width: 100vw;
-  height: 100vh;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  position: relative;
-}
-body .border .care {
-  width: 50%;
-  height: -webkit-fill-available;
-  height: -moz-available;
-  height: stretch;
-}
-body .border .wecare {
-  width: 65%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  flex-wrap: wrap;
-}
-body .border .wecare .caree {
-  font-size: 3.8em;
-  color: black;
-  font-weight: 600;
-  text-align: left;
-  padding: 0 100px;
-}
-@media (max-width: 869px) {
-  body .border .wecare .caree {
-    padding: 0 10px;
-  }
-}
-body .border .wecare #we-always {
-  color: #A2C0BE;
-  font-size: 1.4em;
-  text-align: left;
-  padding: 0 100px;
-  font-weight: 200;
-}
-@media (max-width: 869px) {
-  body .border .wecare #we-always {
-    padding: 0 10px;
-  }
-}
-@media (max-width: 1157px) {
-  body .border .wecare {
-    font-size: 15px;
-  }
-}
-@media (max-width: 593px) {
-  body .border .wecare {
-    font-size: 10px;
-  }
-}
-body .border .dog-img {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 35%;
-}
-body .border .dog-img .dogg {
-  width: 100%;
-  height: 100%;
-  margin: 70px 10px;
-  background-image: url("./src/dogger_img_1.png");
-  background-size: cover;
-}
-@media (max-width: 1200px) {
-  body .border .dog-img {
-    width: 50%;
-    height: 80%;
-  }
-}
-@media (max-width: 900px) {
-  body .border {
-    flex-direction: column;
-  }
-}
-body .nav-bar {
-  width: 100vw;
-  box-shadow: 1px 1px 5px 1px black;
   position: fixed;
-  background-color: white;
-  top: 0px;
+  justify-content: space-around;
+  font-size: 30px;
+  border-bottom: 2px solid black;
+  box-shadow: 2px 1px 5px 2px black;
 }
-body .nav-bar .dogger {
-  margin-left: 80px;
-  font-size: 2em;
-  font-weight: 600;
-}
-body .nav-bar .dogger .dot {
-  color: teal;
-}
-body .nav-bar .home ul {
-  color: black;
-  font-weight: 400;
+.nav-bar .home {
+  font-size: 20px;
+  display: flex;
   justify-content: space-evenly;
-  list-style: none;
-  margin-right: 120px;
+  align-items: center;
 }
-body .nav-bar .home ul li {
-  font-size: 1.2em;
-  margin: 0 25px;
-  padding: 10px;
+.nav-bar .home .hh {
+  margin: 15px 25px;
 }
-body .nav-bar .home ul li:hover {
-  color: #A2C0BE;
-}
-body .nav-bar .bar {
-  margin-right: 80px;
+.nav-bar .home #on {
   display: none;
-  padding: 20px;
-  font-size: 1.2em;
 }
-@media (max-width: 1120px) {
-  body .nav-bar .bar {
-    display: block;
-  }
+.nav-bar .home #on:checked + .about > .trade {
+  display: block;
 }
-@media (max-width: 1120px) {
-  body .home {
+.nav-bar .home .about .trade {
+  position: absolute;
+  top: 50px;
+  width: 200px;
+  display: none;
+}
+.nav-bar .home .about .trade ul {
+  margin: 0;
+  font-size: 25px;
+  line-height: 40px;
+  list-style: none;
+  background-color: white;
+  height: 300px;
+  border-top: 2px solid grey;
+  box-shadow: 2px 1px 5px 2px black;
+}
+.nav-bar .home .about .trade ul li {
+  text-align: center;
+  cursor: pointer;
+}
+.nav-bar .home .about .trade ul li:hover {
+  background-color: rgb(210, 185, 185);
+}
+@media (max-width: 1000px) {
+  .nav-bar .home {
     display: none;
   }
 }
-body .welcome {
+.nav-bar .menu {
+  margin-right: 50px;
+  display: none;
+  margin: 20px;
+}
+@media (max-width: 1000px) {
+  .nav-bar .menu {
+    display: block;
+  }
+}
+
+.border {
+  width: 100vw;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 10px 10px;
+  font-size: 16px;
 }
-body .welcome .po {
-  flex-direction: column;
-  width: 70%;
+.border .wecare {
+  width: 50%;
+  display: flex;
   align-items: center;
-}
-body .welcome .po .pow {
-  font-size: 2em;
+  flex-direction: column;
+  justify-content: center;
   padding: 10px 50px;
+}
+.border .wecare h1 {
+  font-size: 3.4em;
+  font-weight: 700;
+}
+.border .wecare p {
+  font-size: 1.5em;
   color: #A2C0BE;
 }
-body .welcome .po .pow .left-pow {
-  font-size: 20px;
+.border .dog-img {
+  width: 50%;
+  height: 100%;
+  background-image: url("./src/dogger_img_1.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center bottom;
 }
-body .welcome .po .pow .right-pow {
-  font-size: 20px;
-}
-body .welcome .po .welcome-to {
-  font-size: 2.2em;
-  padding: 10px 200px;
-  text-align: center;
-  font-weight: 600;
-}
-@media (max-width: 800px) {
-  body .welcome .po .welcome-to {
-    font-size: 1.6em;
+@media (max-width: 1100px) {
+  .border .wecare h1 {
+    font-size: 3.6em;
+  }
+  .border .wecare p {
+    font-size: 1.4em;
+  }
+  .border .dog-img {
+    background-size: 70%;
+    background-position: center bottom;
   }
 }
-body .welcome .po .Far {
-  font-size: 1.2em;
-  padding: 10px 150px;
-  text-align: center;
-  color: #A2C0BE;
-  margin: 0 60px;
-}
+
 @media (max-width: 800px) {
-  body .welcome .po .Far {
-    font-size: 0.6em;
+  .border {
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
   }
-}
-@media (max-width: 1000px) {
-  body .welcome .po {
+  .border .wecare {
     width: 100%;
+    height: 70%;
+    padding-top: 30px;
   }
+  .border .wecare h1 {
+    font-size: 2.7em;
+    text-align: center;
+  }
+  .border .wecare p {
+    font-size: 1em;
+    text-align: center;
+  }
+  .border .dog-img {
+    width: 100%;
+    background-size: 70%;
+    background-position: top center;
+  }
+}
+.welcome {
+  width: 100vw;
+  height: 100vh;
+  background-color: aqua;
 }/*# sourceMappingURL=dogger.css.map */
