--- a/dogger.scss
+++ b/dogger.scss
@@ -25,9 +25,13 @@
         align-items: center;
 
 
+
         .hh {
             margin: 15px 25px;
 
+            &:hover {
+                color: $colorr ;
+            }
         }
 
         #on {
@@ -49,6 +53,10 @@
                 // margin-left: -50px;
                 display: none;
 
+                &:hover {
+                    color: black;
+                }
+
                 ul {
                     margin: 0;
 
@@ -67,6 +75,7 @@
 
                     li:hover {
                         background-color: rgb(210, 185, 185);
+                        color: black;
                     }
 
 
