--- a/_800px.scss
+++ b/_800px.scss
@@ -1,7 +1,7 @@
 @media (max-width:800px) {
     .border {
         flex-direction: column;
-        justify-content: space-evenly;
+        justify-content: center;
         align-items: center;
 
 
@@ -9,16 +9,16 @@
 
         .wecare {
             width: 100%;
-            height: 70%;
+            height: 50%;
             padding-top: 30px;
 
             h1 {
-                font-size: 2.7em;
+                font-size: 3em;
                 text-align: center;
             }
 
             p {
-                font-size: 1em;
+                font-size: 1.2em;
                 text-align: center;
             }
         }
@@ -26,7 +26,8 @@
 
         .dog-img {
             width: 100%;
-            background-size: 70%;
+            height: 50%;
+            background-size: 65%;
             background-position: top center;
         }
     }
