--- a/dogger.scss
+++ b/dogger.scss
@@ -14,6 +14,7 @@
     position: fixed;
     justify-content: space-around;
     font-size: 30px;
+    background-color: #F8F9FA;
     border-bottom: 2px solid black;
     box-shadow: 2px 1px 5px 2px black;
 
@@ -59,7 +60,7 @@
                 position: absolute;
                 top: 70px;
                 width: 200px;
-                // margin-left: -50px;
+
                 display: none;
 
                 &:hover {
@@ -69,10 +70,11 @@
                 ul {
                     margin: 0;
 
-                    font-size: 25px;
+                    font-size: 30px;
                     line-height: 40px;
+                    font-weight: 550;
                     list-style: none;
-                    background-color: white;
+                    background-color: rgba(243, 235, 235, 0.954);
                     height: 300px;
                     border-top: 2px solid grey;
                     box-shadow: 2px 1px 5px 2px black;
@@ -123,7 +125,7 @@
     height: 100vh;
     // border: 4px solid red;
     display: flex;
-    // justify-content: center;
+    justify-content: center;
     align-items: center;
     font-size: 16px;
     background-color: #F8F9FA;
