--- a/_800px.scss
+++ b/_800px.scss
@@ -9,8 +9,8 @@
 
         .wecare {
             width: 100%;
-            height: 50%;
-            padding-top: 30px;
+            height: 40%;
+            margin-top: 60px;
 
             h1 {
                 font-size: 3em;
@@ -23,12 +23,17 @@
             }
         }
 
-
         .dog-img {
-            width: 100%;
-            height: 50%;
-            background-size: 65%;
-            background-position: top center;
+            height: 700px;
+            width: 500px;
+
+
+            .blackky-dog {
+                width: 95%;
+                height: 70%;
+                background-size: 100%;
+                background-position: top;
+            }
         }
     }
 }
