--- a/dogger.css
+++ b/dogger.css
@@ -93,13 +93,12 @@
   width: 100vw;
   height: 100vh;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   font-size: 16px;
   background-color: #F8F9FA;
 }
 .border .wecare {
-  width: 50%;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -115,10 +114,18 @@
   color: #799290;
 }
 .border .dog-img {
-  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  height: 700px;
+  width: 600px;
+}
+.border .dog-img .blackky-dog {
+  width: 90%;
   height: 100%;
   background-image: url("./src/dogger_img_1.png");
-  background-size: contain;
+  background-size: 100%;
   background-repeat: no-repeat;
   background-position: center bottom;
 }
@@ -149,8 +156,8 @@
   }
   .border .wecare {
     width: 100%;
-    height: 50%;
-    padding-top: 30px;
+    height: 40%;
+    margin-top: 60px;
   }
   .border .wecare h1 {
     font-size: 3em;
@@ -161,10 +168,14 @@
     text-align: center;
   }
   .border .dog-img {
-    width: 100%;
-    height: 50%;
-    background-size: 65%;
-    background-position: top center;
+    height: 700px;
+    width: 500px;
+  }
+  .border .dog-img .blackky-dog {
+    width: 95%;
+    height: 70%;
+    background-size: 100%;
+    background-position: top;
   }
 }
 .welcome {
