--- a/dogger.scss
+++ b/dogger.scss
@@ -125,13 +125,13 @@
     height: 100vh;
     // border: 4px solid red;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     font-size: 16px;
     background-color: #F8F9FA;
 
     .wecare {
-        width: 50%;
+        // width: 50%;
         display: flex;
         align-items: center;
         flex-direction: column;
@@ -148,16 +148,26 @@
             font-size: 1.6em;
             color: $colorr;
 
+
         }
     }
 
     .dog-img {
-        width: 50%;
-        height: 100%;
-        background-image: url('./src/dogger_img_1.png');
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: center bottom;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+        height: 700px;
+        width: 600px;
+
+        .blackky-dog {
+            width: 90%;
+            height: 100%;
+            background-image: url('./src/dogger_img_1.png');
+            background-size: 100%;
+            background-repeat: no-repeat;
+            background-position: center bottom;
+        }
     }
 
     @media(max-width:400px) {
