--- a/dogger.css
+++ b/dogger.css
@@ -95,7 +95,7 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  font-size: 16px;
+  font-size: 17px;
   background-color: #F8F9FA;
 }
 .border .wecare {
@@ -103,7 +103,7 @@
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  padding: 10px 80px;
+  padding: 10px 20px;
 }
 .border .wecare h1 {
   font-size: 3.5em;
@@ -131,7 +131,7 @@
 }
 @media (max-width: 400px) {
   .border .dog-img {
-    background-size: 40%;
+    background-size: 90%;
     background-position: center bottom;
   }
 }
@@ -173,14 +173,13 @@
   }
   .border .dog-img .blackky-dog {
     width: 95%;
-    height: 70%;
+    height: 100%;
     background-size: 100%;
     background-position: top;
   }
 }
 .welcome {
   width: 100vw;
-  height: 60vh;
   font-size: 16px;
   display: flex;
   justify-content: center;
@@ -190,10 +189,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 80%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
   flex-direction: column;
-  padding: 20%;
+  padding: 10%;
   font-size: 16px;
 }
 .welcome .well .paw {
@@ -209,17 +208,19 @@
   text-align: center;
   font-weight: 700;
 }
-.welcome .well .far {
+.welcome .well .farr {
   text-align: center;
-  text-transform: capitalize;
-  font-size: 1em;
+  font-size: 1.5em;
   line-height: 40px;
   color: #799290;
+  width: 100%;
   font-weight: 600;
 }
 @media (max-width: 900px) {
   .welcome .well {
-    font-size: 12px;
+    width: 100%;
+    height: 100%;
+    font-size: 25px;
     padding: 10%;
   }
 }
@@ -233,13 +234,13 @@
 .love {
   width: 100vw;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 .love .love-border {
-  width: 95%;
+  width: 100%;
   height: 90%;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
 }
@@ -248,7 +249,7 @@
   align-items: flex-end;
   justify-content: center;
   flex-direction: column;
-  font-size: 16px;
+  font-size: 17px;
 }
 .love .love-border .love-care .care {
   font-size: 2.5em;
@@ -275,7 +276,7 @@
   color: white;
 }
 .love .love-border .ll {
-  width: 45%;
+  width: 47.5%;
   height: 50%;
   padding: 10px;
 }
@@ -386,7 +387,7 @@
   margin: 10px;
 }
 .love .love-border .beautiful .readme {
-  padding: 10px 20px;
+  padding: 10px 10px;
   background-color: #799290;
   border-radius: 30px;
   margin: 10px;
@@ -401,9 +402,10 @@
   .love .love-border {
     flex-direction: column;
     flex-wrap: wrap;
+    width: 100%;
   }
   .love .love-border .ll {
-    width: 80%;
+    width: 100%;
   }
 }
 
