--- a/dogger.scss
+++ b/dogger.scss
@@ -127,7 +127,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    font-size: 16px;
+    font-size: 17px;
     background-color: #F8F9FA;
 
     .wecare {
@@ -136,7 +136,7 @@
         align-items: center;
         flex-direction: column;
         justify-content: center;
-        padding: 10px 80px;
+        padding: 10px 20px;
 
         h1 {
             font-size: 3.5em;
@@ -172,7 +172,7 @@
 
     @media(max-width:400px) {
         .dog-img {
-            background-size: 40%;
+            background-size: 90%;
             background-position: center bottom;
         }
     }
@@ -185,7 +185,7 @@
 
 .welcome {
     width: 100vw;
-    height: 60vh;
+    // height: 60vh;
     font-size: 16px;
     display: flex;
     justify-content: center;
@@ -195,10 +195,10 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 80%;
-        height: 80%;
+        width: 100%;
+        height: 100%;
         flex-direction: column;
-        padding: 20%;
+        padding: 10%;
         font-size: 16px;
 
         .paw {
@@ -217,19 +217,22 @@
             font-weight: 700;
         }
 
-        .far {
+        .farr {
             text-align: center;
-            text-transform: capitalize;
-            font-size: 1em;
+            // text-transform: capitalize;
+            font-size: 1.5em;
             line-height: 40px;
             color: $colorr;
+            width: 100%;
             font-weight: 600;
         }
     }
 
     @media(max-width:900px) {
         .well {
-            font-size: 12px;
+            width: 100%;
+            height: 100%;
+            font-size: 25px;
             padding: 10%;
         }
     }
@@ -249,14 +252,14 @@
     // height: 700px;
     // border: 4px solid black;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     // align-items: center;
 
     .love-border {
-        width: 95%;
+        width: 100%;
         height: 90%;
         display: flex;
-        justify-content: center;
+        justify-content: space-evenly;
         align-items: center;
         // flex-direction: column;
         flex-wrap: wrap;
@@ -268,7 +271,7 @@
             align-items: flex-end;
             justify-content: center;
             flex-direction: column;
-            font-size: 16px;
+            font-size: 17px;
 
 
 
@@ -304,7 +307,7 @@
 
         .ll {
 
-            width: calc(90%/2);
+            width: calc(95%/2);
             height: 50%;
             // border: 2px solid black;
             padding: 10px;
@@ -442,7 +445,7 @@
             }
 
             .readme {
-                padding: 10px 20px;
+                padding: 10px 10px;
                 background-color: $colorr;
                 border-radius: 30px;
                 margin: 10px;
@@ -465,9 +468,10 @@
             // column-count: 1;
             flex-direction: column;
             flex-wrap: wrap;
+            width: 100%;
 
             .ll {
-                width: 80%;
+                width: 100%;
             }
 
         }
