--- a/_800px.scss
+++ b/_800px.scss
@@ -9,16 +9,16 @@
 
         .wecare {
             width: 100%;
-            height: 40%;
+            // height: 40%;
             margin-top: 60px;
 
             h1 {
-                font-size: 3em;
+                font-size: 4em;
                 text-align: center;
             }
 
             p {
-                font-size: 1.2em;
+                font-size: 1.6em;
                 text-align: center;
             }
         }
