--- a/dogger.css
+++ b/dogger.css
@@ -1,7 +1,11 @@
-.about-us .aboutt .uss, .about-us, .nav-bar {
+.jesi .pictures .pics:nth-child(3), .jesi .pictures .pics:nth-child(2), .jesi .pictures .pics:nth-child(1), .about-us .aboutt .uss, .about-us, .nav-bar {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.jesi .pictures .pics:nth-child(3) .img:hover, .jesi .pictures .pics:nth-child(2) .img:hover, .jesi .pictures .pics:nth-child(1) .img:hover {
+  box-shadow: 4px 4px 4px 4px black, 6px 6px 4px 4px black;
 }
 
 * {
@@ -593,23 +597,120 @@
   width: 100vw;
   background-color: #A2C0BE;
   display: flex;
-  border: 2px solid black;
-  justify-content: space-evenly;
-  align-items: flex-start;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
-.jesi .pics {
+.jesi .pictures {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 90%;
+}
+.jesi .pictures .pics {
+  width: 350px;
   height: 803px;
-  border: 2px solid black;
   margin: 10px;
 }
-@media (max-width: 1150px) {
-  .jesi .pics:nth-child(3) {
-    align-self: stretch;
+@media (max-width: 840px) {
+  .jesi .pictures .pics {
+    width: 500px;
+  }
+  .jesi .pictures .pics .img {
+    background-size: 100%;
+    background-position: center;
   }
 }
-
-@media (max-width: 1150px) {
-  .jesi {
-    flex-direction: column;
-  }
+.jesi .pictures .pics:nth-child(1) {
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+}
+.jesi .pictures .pics:nth-child(1) .img {
+  width: 100%;
+  height: 60%;
+  background-image: url("./src/dogger_trainer_1.jpg.webp");
+  background-size: 100%;
+  transition: 1.5s;
+  background-repeat: no-repeat;
+}
+.jesi .pictures .pics:nth-child(1) .jesica {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  justify-content: center;
+}
+.jesi .pictures .pics:nth-child(1) .jesica p {
+  margin: 25px;
+}
+.jesi .pictures .pics:nth-child(1) .jesica p:first-child {
+  font-size: 2em;
+}
+.jesi .pictures .pics:nth-child(1) .jesica p:nth-child(3) span {
+  margin: 10px;
+  padding: 10px 15px;
+  background-color: white;
+  border-radius: 50%;
+}
+.jesi .pictures .pics:nth-child(2) {
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+}
+.jesi .pictures .pics:nth-child(2) .img {
+  width: 100%;
+  height: 60%;
+  background-image: url("./src/dogger_trainer_2.jpg.webp");
+  background-size: 100%;
+  transition: 1.5s;
+}
+.jesi .pictures .pics:nth-child(2) .jesica {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  justify-content: center;
+}
+.jesi .pictures .pics:nth-child(2) .jesica p {
+  margin: 25px;
+}
+.jesi .pictures .pics:nth-child(2) .jesica p:first-child {
+  font-size: 2em;
+}
+.jesi .pictures .pics:nth-child(2) .jesica p:nth-child(3) span {
+  margin: 10px;
+  padding: 10px 15px;
+  background-color: white;
+  border-radius: 50%;
+}
+.jesi .pictures .pics:nth-child(3) {
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+}
+.jesi .pictures .pics:nth-child(3) .img {
+  width: 100%;
+  height: 60%;
+  background-image: url("./src/dogger_trainer_3.jpg.webp");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  transition: 1.5s;
+}
+.jesi .pictures .pics:nth-child(3) .jesica {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  justify-content: center;
+}
+.jesi .pictures .pics:nth-child(3) .jesica p {
+  margin: 25px;
+}
+.jesi .pictures .pics:nth-child(3) .jesica p:first-child {
+  font-size: 2em;
+}
+.jesi .pictures .pics:nth-child(3) .jesica p:nth-child(3) span {
+  margin: 10px;
+  padding: 10px 15px;
+  background-color: white;
+  border-radius: 50%;
 }/*# sourceMappingURL=dogger.css.map */
